<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>info.jab</groupId>
    <artifactId>advent-of-code</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <developers>
        <developer>
            <id>jabrena</id>
            <name>Juan Antonio Breña Moral</name>
            <email>bren@juanantonio.info</email>
        </developer>
    </developers>

    <properties>
        <!-- Core build properties -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>25</java.version>
        <maven.version>3.9.10</maven.version>

        <!-- Dependency versions -->
        <jcolor.version>5.5.1</jcolor.version>
        <putoet.aoc.version>1.7.0</putoet.aoc.version>
        <combinatoricslib3.version>3.4.0</combinatoricslib3.version>
        <guava.version>33.5.0-jre</guava.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <eclipse-collections.version>13.0.0</eclipse-collections.version>
        <jackson.version>2.20.1</jackson.version>
        <jol.version>0.17</jol.version>
        <jmh.version>1.37</jmh.version>
        <javafx.version>21.0.2</javafx.version>

        <!-- Testing dependency versions -->
        <junit-jupiter.version>6.0.1</junit-jupiter.version>
        <assertj-core.version>3.27.6</assertj-core.version>

        <!-- Maven plugin versions -->
        <maven-plugin-enforcer.version>3.6.2</maven-plugin-enforcer.version>
        <maven-plugin-compiler.version>3.14.1</maven-plugin-compiler.version>
        <maven-plugin-surefire.version>3.5.4</maven-plugin-surefire.version>
        <maven-plugin-surefire-report.version>3.5.4</maven-plugin-surefire-report.version>
        <maven-plugin-versions.version>2.20.1</maven-plugin-versions.version>
        <maven-plugin-exec.version>3.6.2</maven-plugin-exec.version>
    </properties>

    <!-- Modules -->
    <modules>
        <module>commons</module>
        <module>2025</module>
        <module>2024</module>
        <module>2023</module>
        <module>2022</module>
        <module>2021</module>
        <module>2020</module>
        <!--<module>2019</module>-->
        <module>2018</module>
        <module>2017</module>
        <module>2016</module>
        <module>2015</module>
        <module>third-party</module>
    </modules>

    <!-- Dependency Management -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>info.jab.aoc</groupId>
                <artifactId>commons</artifactId>
                <version>0.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.putoet</groupId>
                <artifactId>aoc</artifactId>
                <version>${putoet.aoc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.diogonunes</groupId>
                <artifactId>JColor</artifactId>
                <version>${jcolor.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dpaukov</groupId>
                <artifactId>combinatoricslib3</artifactId>
                <version>${combinatoricslib3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections</artifactId>
                <version>${eclipse-collections.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- JavaFX -->
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj-core.version}</version>
            </dependency>

            <!-- JOL -->
            <dependency>
                <groupId>org.openjdk.jol</groupId>
                <artifactId>jol-core</artifactId>
                <version>${jol.version}</version>
            </dependency>

            <!-- JMH -->
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core</artifactId>
                <version>${jmh.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-annprocess</artifactId>
                <version>${jmh.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Dependencies -->
    <dependencies>
        <dependency>
            <groupId>info.jab.aoc</groupId>
            <artifactId>commons</artifactId>
        </dependency>
        <dependency>
            <groupId>com.diogonunes</groupId>
            <artifactId>JColor</artifactId>
        </dependency>
        <dependency>
            <groupId>com.putoet</groupId>
            <artifactId>aoc</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.dpaukov</groupId>
            <artifactId>combinatoricslib3</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse.collections</groupId>
            <artifactId>eclipse-collections</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jol</groupId>
            <artifactId>jol-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- JMH -->
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- Build Configuration -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-plugin-enforcer.version}</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <dependencyConvergence />
                                <banDuplicatePomDependencyVersions />
                                <requireMavenVersion>
                                    <version>${maven.version}</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                                <bannedDependencies>
                                    <excludes>
                                        <exclude>org.projectlombok:lombok</exclude>
                                    </excludes>
                                </bannedDependencies>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-plugin-compiler.version}</version>
                <configuration>
                    <compilerArgument>-Xlint:all</compilerArgument><!-- -Werror -->
                    <compilerArgument>--enable-preview</compilerArgument>
                    <release>${java.version}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.openjdk.jmh</groupId>
                            <artifactId>jmh-generator-annprocess</artifactId>
                            <version>${jmh.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-plugin-surefire.version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${maven-plugin-versions.version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${maven-plugin-exec.version}</version>
            </plugin>
        </plugins>
    </build>

    <!-- Reporting Configuration -->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-plugin-surefire-report.version}</version>
                <configuration>
                    <showSuccess>false</showSuccess>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
